--- a/piercinger.html
+++ b/piercinger.html
@@ -50,43 +50,34 @@
 
             <div class="col">
                 <div class="txt">
-                    <h2>bla bla piercing</h2>
+                    <h2>Øreflip</h2>
                 </div>
                 <div class="img">
                     <figure>
-                        <img src="billeder/fissetest.png" alt="fissetest">
+                        <img src="piercinger/oerering.png" alt="ørering">
                     </figure>
-                </div>
-                <div class="txt">
-                    <p>Slet måske tekst</p>
                 </div>
             </div>
 
             <div class="col">
                 <div class="txt">
-                    <h2>bla bla piercing</h2>
+                    <h2>Helix</h2>
                 </div>
                 <div class="img">
                     <figure>
-                        <img src="billeder/piktest.png" alt="piktest">
+                        <img src="piercinger/helix.png" alt="helix">
                     </figure>
-                </div>
-                <div class="txt">
-                    <p>Slet måske tekst</p>
                 </div>
             </div>
 
             <div class="col">
                 <div class="txt">
-                    <h2>bla bla piercing</h2>
+                    <h2>Tragus</h2>
                 </div>
                 <div class="img">
                     <figure>
-                        <img src="billeder/mundtest.png" alt="mundtest">
+                        <img src="piercinger/tragus.png" alt="tragus">
                     </figure>
-                </div>
-                <div class="txt">
-                    <p>Slet måske tekst</p>
                 </div>
             </div>
 
@@ -96,43 +87,34 @@
 
             <div class="col">
                 <div class="txt">
-                    <h2>bla bla piercing</h2>
+                    <h2>Daith</h2>
                 </div>
                 <div class="img">
                     <figure>
-                        <img src="billeder/fissetest.png" alt="fissetest">
+                        <img src="piercinger/daith.png" alt="daith">
                     </figure>
-                </div>
-                <div class="txt">
-                    <p>Slet måske tekst</p>
                 </div>
             </div>
 
             <div class="col">
                 <div class="txt">
-                    <h2>bla bla piercing</h2>
+                    <h2>Conch</h2>
                 </div>
                 <div class="img">
                     <figure>
-                        <img src="billeder/piktest.png" alt="piktest">
+                        <img src="piercinger/conch.png" alt="conch">
                     </figure>
-                </div>
-                <div class="txt">
-                    <p>Slet måske tekst</p>
                 </div>
             </div>
 
             <div class="col">
                 <div class="txt">
-                    <h2>bla bla piercing</h2>
+                    <h2>Rook</h2>
                 </div>
                 <div class="img">
                     <figure>
-                        <img src="billeder/mundtest.png" alt="mundtest">
+                        <img src="piercinger/rook.png" alt="rook">
                     </figure>
-                </div>
-                <div class="txt">
-                    <p>Slet måske tekst</p>
                 </div>
             </div>
 
@@ -143,47 +125,338 @@
 
             <div class="col">
                 <div class="txt">
-                    <h2>bla bla piercing</h2>
+                    <h2>Industrial</h2>
                 </div>
                 <div class="img">
                     <figure>
-                        <img src="billeder/fissetest.png" alt="fissetest">
+                        <img src="piercinger/industrial.png" alt="industrial">
                     </figure>
                 </div>
                 <div class="txt">
-                    <p>Slet måske tekst</p>
+                    <p>Lodret og/eller vandret. </p>
                 </div>
             </div>
 
             <div class="col">
                 <div class="txt">
-                    <h2>bla bla piercing</h2>
+                    <h2>Innerhelix</h2>
                 </div>
                 <div class="img">
                     <figure>
-                        <img src="billeder/piktest.png" alt="piktest">
+                        <img src="piercinger/innerhelix.png" alt="innerhelix">
                     </figure>
-                </div>
-                <div class="txt">
-                    <p>Slet måske tekst</p>
                 </div>
             </div>
 
             <div class="col">
                 <div class="txt">
-                    <h2>bla bla piercing</h2>
+                    <h2>Øjenbryn</h2>
                 </div>
                 <div class="img">
                     <figure>
-                        <img src="billeder/mundtest.png" alt="mundtest">
+                        <img src="piercinger/oejenbryn.png" alt="øjenbryn">
                     </figure>
-                </div>
-                <div class="txt">
-                    <p>Slet måske tekst</p>
                 </div>
             </div>
 
         </div>
+
+        <div class="wrap">
+
+
+            <div class="col">
+                <div class="txt">
+                    <h2>Næsefløj</h2>
+                </div>
+                <div class="img">
+                    <figure>
+                        <img src="piercinger/naesefloej.png" alt="næsefløj">
+                    </figure>
+                </div>
+            </div>
+
+            <div class="col">
+                <div class="txt">
+                    <h2>Septum</h2>
+                </div>
+                <div class="img">
+                    <figure>
+                        <img src="piercinger/septum.png" alt="septum">
+                    </figure>
+                </div>
+            </div>
+
+            <div class="col">
+                <div class="txt">
+                    <h2>Earl</h2>
+                </div>
+                <div class="img">
+                    <figure>
+                        <img src="piercinger/earl.png" alt="earl">
+                    </figure>
+                </div>
+            </div>
+
+        </div>
+
+
+        <div class="wrap">
+
+
+            <div class="col">
+                <div class="txt">
+                    <h2>Læbe</h2>
+                </div>
+                <div class="img">
+                    <figure>
+                        <img src="piercinger/laebe.png" alt="læbepiercing">
+                    </figure>
+                </div>
+            </div>
+
+            <div class="col">
+                <div class="txt">
+                    <h2>Labret</h2>
+                </div>
+                <div class="img">
+                    <figure>
+                        <img src="piercinger/labret.png" alt="labret">
+                    </figure>
+                </div>
+            </div>
+
+            <div class="col">
+                <div class="txt">
+                    <h2>Iwacha</h2>
+                </div>
+                <div class="img">
+                    <figure>
+                        <img src="piercinger/iwacha.png" alt="iwacha">
+                    </figure>
+                </div>
+            </div>
+
+        </div>
+
+        <div class="wrap">
+
+
+            <div class="col">
+                <div class="txt">
+                    <h2>Madonna</h2>
+                </div>
+                <div class="img">
+                    <figure>
+                        <img src="piercinger/madonna.png" alt="madonna">
+                    </figure>
+                </div>
+                <div class="txt">
+                    <p>Fun fact: Jack Rubini navngav Madonna piercingen. </p>
+                </div>
+            </div>
+
+            <div class="col">
+                <div class="txt">
+                    <h2>Smiley</h2>
+                </div>
+                <div class="img">
+                    <figure>
+                        <img src="piercinger/laebe.png" alt="">
+                    </figure>
+                </div>
+            </div>
+
+            <div class="col">
+                <div class="txt">
+                    <h2>Krop</h2>
+                </div>
+                <div class="img_kropspiercinger">
+                    <figure>
+                        <img src="piercinger/dermalanchoring_skindivers_surface.png" alt="kropspiercinger">
+                    </figure>
+                </div>
+                <div class="txt">
+                    <p>Dermal anchoring, skin divers og surface piercings. </p>
+                </div>
+            </div>
+
+        </div>
+
+        <div class="wrap">
+
+
+            <div class="col">
+                <div class="txt">
+                    <h2>Brystvorte</h2>
+                </div>
+                <div class="img">
+                    <figure>
+                        <img src="piercinger/brystvorte.png" alt="brystvorte">
+                    </figure>
+                </div>
+                <div class="txt">
+                    <p>Lodret og/eller vandret. </p>
+                </div>
+            </div>
+
+            <div class="col">
+                <div class="txt">
+                    <h2>Navle</h2>
+                </div>
+                <div class="img">
+                    <figure>
+                        <img src="piercinger/innerhelix.png" alt="innerhelix">
+                    </figure>
+                </div>
+            </div>
+
+            <div class="col">
+                <div class="txt">
+                    <h2>Christina</h2>
+                </div>
+                <div class="img">
+                    <figure>
+                        <img src="piercinger/christina.png" alt="christina">
+                    </figure>
+                </div>
+            </div>
+
+        </div>
+
+
+        <div class="wrap">
+
+
+            <div class="col">
+                <div class="txt">
+                    <h2>Klitoris</h2>
+                </div>
+                <div class="img">
+                    <figure>
+                        <img src="piercinger/klitorisforhudlodret.png" alt="klitorisforhud lodret">
+                    </figure>
+                </div>
+                <div class="txt">
+                    <p>Klitoris forhud, lodret. </p>
+                </div>
+            </div>
+
+            <div class="col">
+                <div class="txt">
+                    <h2>Klitoris</h2>
+                </div>
+                <div class="img">
+                    <figure>
+                        <img src="piercinger/klitorisforhud.png" alt="klitoris forhud vandret">
+                    </figure>
+                </div>
+                <div class="txt">
+                    <p>klitoris forhud, vandret. </p>
+                </div>
+            </div>
+
+            <div class="col">
+                <div class="txt">
+                    <h2>Kønslæbe</h2>
+                </div>
+                <div class="img">
+                    <figure>
+                        <img src="piercinger/indrekoenslaebe.png">
+                    </figure>
+                </div>
+                <div class="txt">
+                    <p>Indre kønslæbe. </p>
+                </div>
+            </div>
+
+        </div>
+
+
+        <div class="wrap">
+
+
+            <div class="col">
+                <div class="txt">
+                    <h2>Kønslæbe</h2>
+                </div>
+                <div class="img">
+                    <figure>
+                        <img src="piercinger/ydrekoenslaebe.png" alt="ydre kønslæbe">
+                    </figure>
+                </div>
+                <div class="txt">
+                    <p>Ydre kønslæbe. </p>
+                </div>
+            </div>
+
+            <div class="col">
+                <div class="txt">
+                    <h2>Fourchette</h2>
+                </div>
+                <div class="img">
+                    <figure>
+                        <img src="piercinger/fourchette.png" alt="fourchette">
+                    </figure>
+                </div>
+            </div>
+
+            <div class="col">
+                <div class="txt">
+                    <h2>Pubic</h2>
+                </div>
+                <div class="img">
+                    <figure>
+                        <img src="piercinger/pubic.png" alt="pubic">
+                    </figure>
+                </div>
+            </div>
+
+        </div>
+
+
+        <div class="wrap">
+
+
+            <div class="col">
+                <div class="txt">
+                    <h2>Q. victoria</h2>
+                </div>
+                <div class="img">
+                    <figure>
+                        <img src="piercinger/queenvictoria.png" alt="queen vinctoria">
+                    </figure>
+                </div>
+                <div class="txt">
+                    <p>Queen Victoria. </p>
+                </div>
+            </div>
+
+            <div class="col">
+                <div class="txt">
+                    <h2>Apadravya</h2>
+                </div>
+                <div class="img">
+                    <figure>
+                        <img src="piercinger/apadravya.png" alt="apadravya">
+                    </figure>
+                </div>
+            </div>
+
+            <div class="col">
+                <div class="txt">
+                    <h2>Hafada</h2>
+                </div>
+                <div class="img">
+                    <figure>
+                        <img src="piercinger/pung.png" alt="hafada">
+                    </figure>
+                </div>
+            </div>
+
+        </div>
+
+
+
 
         <!--        *******Billeder af piercinger slut*******-->
 
@@ -235,6 +508,4 @@
 
 
     <script src="script.js"></script>
-</body>
-
-</html>
+</body></html>
