--- a/index.html
+++ b/index.html
@@ -14,28 +14,31 @@
 
 <body>
 
-
-
     <header>
 
         <nav>
 
-            <a href="index.html" id="menuforside">Forside</a>
+            <a href="index.html">Forside</a>
             <a href="piercinger.html">Piercinger</a>
             <a href="praktiskinfo.html" id="menupraktiskinfo">Praktisk info</a>
             <a href="omos.html">Om os</a>
             <a href="priser.html">Priser</a>
-            <a href="kontaktbooking.html">Kontakt/booking</a>
-
+            <a href="kontaktbooking.html" id="menukontaktbooking">Kontakt/booking</a>
 
         </nav>
 
     </header>
 
 
-    <section id="splash">
+    <div class="logo">
 
-    </section>
+    </div>
+
+
+    <div id="splash">
+
+    </div>
+
 
     <footer>
 
