--- a/kontaktbooking.html
+++ b/kontaktbooking.html
@@ -21,10 +21,10 @@
         <nav>
             <a href="index.html">Forside</a>
             <a href="piercinger.html">Piercinger</a>
-            <a href="praktiskinfo.html">Praktisk info</a>
+            <a href="praktiskinfo.html" id="menupraktiskinfo">Praktisk info</a>
             <a href="omos.html">Om os</a>
             <a href="priser.html">Priser</a>
-            <a href="kontaktbooking.html">Kontakt/booking</a>
+            <a href="kontaktbooking.html" id="menukontaktbooking">Kontakt/booking</a>
         </nav>
 
     </header>
