--- a/omos.html
+++ b/omos.html
@@ -61,7 +61,7 @@
                 </div>
                 <div class="img">
                     <figure>
-                        <img src="billeder/jack.jpg" alt="Jack arbejder">
+                        <img src="arbejdsbilleder/jackarbejde.jpg" alt="Jack arbejder">
                     </figure>
                 </div>
                 <div class="txt">
@@ -82,7 +82,7 @@
                 </div>
                 <div class="img">
                     <figure>
-                        <img src="billeder/kira.jpg" alt="Kira arbejder">
+                        <img src="arbejdsbilleder/kiraarbejde.jpg" alt="Kira arbejder">
                     </figure>
                 </div>
                 <div class="txt">
@@ -103,7 +103,7 @@
                 </div>
                 <div class="img">
                     <figure>
-                        <img src="billeder/mira.jpg" alt="Mira arbejder">
+                        <img src="arbejdsbilleder/miraarbejde2.jpg" alt="Mira arbejder">
                     </figure>
                 </div>
                 <div class="txt">
@@ -153,6 +153,4 @@
     </footer>
 
     <script src="script.js"></script>
-</body>
-
-</html>
+</body></html>
