en rettelse i div

--- a/praktiskinfo.html
+++ b/praktiskinfo.html
@@ -24,7 +24,7 @@
         </nav>
     </header>
 
-    <div class="praktiskinfo"></div>
+    <div class="praktiskinfo">Praktisk info</div>
 
     <section id="praktiskinfo">
         <div id="soeg">
