--- a/priser.html
+++ b/priser.html
@@ -27,7 +27,7 @@
 
     </header>
 
-    <div class="priser"></div>
+    <div class="priser">Priser</div>
     <section id="priser">
         <h1>Priser</h1>
 
