bold, slettet nogle ting og rettet noget til

--- a/hudpiercing.html
+++ b/hudpiercing.html
@@ -23,7 +23,7 @@
         </nav>
     </header>
 
-
+    <div class="hudpiercing">Hudpiercing</div>
     <section id="hudpiercing">
         <h1>Hudpiercing</h1>
         <p><b>Navle, Brystvorte, Øreflip, Earl & Øjenbryn</b><br>
