--- a/omos.html
+++ b/omos.html
@@ -39,6 +39,7 @@
             <video controls>
                 <source src="videoer/testvideo.MOV" type="video/mp4">
             </video>
+            <figcaption><a href="https://audionautix.com/">Music by Audionautix.com</a></figcaption>
         </div>
 
         <!--        *******Video slut*******-->
@@ -153,4 +154,6 @@
     </footer>
 
     <script src="script.js"></script>
-</body></html>
+</body>
+
+</html>
