--- a/praktiskinfo.html
+++ b/praktiskinfo.html
@@ -40,7 +40,8 @@
                 Det er også muligt at bruge titanium eller niobium smykker, direkte til den nye piercing. Du bør under ingen omstændigheder bruge guld, under 18 karat nikkelfrit, sølv -uanset renhed, eller billige nikkelsmykker i din nye piercing. De billige smykker kan forårsage nikkelallergi, som du aldrig slipper af med igen, og med sølv og guld-smykker, er dét metal, man tilsætter til legeringen, ikke altid helt godt nok.</p>
             <p>Når din piercing, er helet helt igennem, har du en større frihed til, at bruge smykker af en mindre lødighed, for eksempel som vedhæng, men vores anbefaling er, at du holder dig til kvalitets-smykker, som er lavet til at blive brugt i piercing-sammenhæng.</p>
 
-            <ul>Vi har et meget bredt udvalg af smykker, som vi står inde for ikke giver unødige problemer, både til daglig brug, og til fest & ballade.<br>Nogle af mulighederne er:
+            <p class="list">Vi har et meget bredt udvalg af smykker, som vi står inde for ikke giver unødige problemer, både til daglig brug, og til fest & ballade.<b><br>Nogle af mulighederne er:</b></p>
+            <ul>
                 <li>Forskellige 'kugle-overtræk' i blød plast.</li>
                 <li>Forskellige 'kugler', både kugler af stål, titanium, niobium, hård plast, og mange andre materialer.</li>
                 <li>UV-reflekterende screw on's.</li>
@@ -50,16 +51,16 @@
             <p>Alle vore plast-materialer er naturligvis 100 % fri for thalater!</p>
 
             <h2>Rettigheder</h2>
-            <p>Enhver person som ønsker en piercing har ret til;</p>
-            <p>At blive piercet i et hygiejnisk rum, af en ren og opmærksom piercer, som er iført rent tøj og et par engangs gummihandsker.</p>
-            <p>En ædru, venlig, rolig og kyndig piercer, som kan guide dig tillidsfuldt og sikkert gennem din piercing-oplevelse.</p>
-            <p>At kræve, at pierceren følger den højeste standard indenfor sterilisation og hygiejne.</p>
-            <p>At blive piercet med en helt ny, fuldstændig steril nål, som straks efter piercingen smides i en nålecontainer, specielt beregnet til hospitalsaffald.</p>
-            <p>At kræve at alle instrumenter, som berører kroppen, er nyligt steriliserede i en autoklave, og opbevares i lukkede autoklaveposer indtil brug.</p>
-            <p>At kræve at smykket, som sættes i, har den rigtige trådtykkelse og diameter, for at sikre den hurtigste heling af den pågældende piercing.</p>
-            <p>At vide at piercing-pistoler er upræcise, og kan være direkte farlige, når de bruges andre steder end i øreflippen.</p>
-            <p>At blive ordentligt informeret om helings processen, for den nye piercing.</p>
-            <p>Fortsat at have adgang til sin piercer, for konsultation og assistance med alle piercing-relaterede spørgsmål.</p>
+            <p><b>Enhver person som ønsker en piercing har ret til;</b></p>
+            <p><b>&#167;</b> At blive piercet i et hygiejnisk rum, af en ren og opmærksom piercer, som er iført rent tøj og et par engangs gummihandsker.</p>
+            <p><b>&#167;</b> En ædru, venlig, rolig og kyndig piercer, som kan guide dig tillidsfuldt og sikkert gennem din piercing-oplevelse.</p>
+            <p><b>&#167;</b> At kræve, at pierceren følger den højeste standard indenfor sterilisation og hygiejne.</p>
+            <p><b>&#167;</b> At blive piercet med en helt ny, fuldstændig steril nål, som straks efter piercingen smides i en nålecontainer, specielt beregnet til hospitalsaffald.</p>
+            <p><b>&#167;</b> At kræve at alle instrumenter, som berører kroppen, er nyligt steriliserede i en autoklave, og opbevares i lukkede autoklaveposer indtil brug.</p>
+            <p><b>&#167;</b> At kræve at smykket, som sættes i, har den rigtige trådtykkelse og diameter, for at sikre den hurtigste heling af den pågældende piercing.</p>
+            <p><b>&#167;</b> At vide at piercing-pistoler er upræcise, og kan være direkte farlige, når de bruges andre steder end i øreflippen.</p>
+            <p><b>&#167;</b> At blive ordentligt informeret om helings processen, for den nye piercing.</p>
+            <p><b>&#167;</b> Fortsat at have adgang til sin piercer, for konsultation og assistance med alle piercing-relaterede spørgsmål.</p>
 
             <h2>Efterbehandling</h2>
             <p>Det er vigtigt, at du følger efterbehandlingen nøje. Helingsprocessen er forskellig fra person til person. Vær derfor varsom med at følge eventuelle råd fra venner. Deres helingsforløb kan være helt forskelligt fra dit.<br>Er du i tvivl om det mindste, så vær ikke bange for at henvende dig.<br>Vi står altid parat til at give dig den bedst mulige vejledning.</p>
@@ -70,7 +71,7 @@
 
             <p>I alle tilfælde er det et godt råd, at hvis du bruger saltvand (som du bør) så bør du bruge salt uden tilsat jod, "Havsalt" .Jod kan udtørre området omkring piercingen på en uhensigtsmæssig måde.<br>Kan du ikke få fat i (hav)salt uden jod, er det dog bedre at bruge salt med jod, end ikke at bruge saltvand, da du får langt større problemer ved ikke at bruge saltvand, end ved at bruge salt(vand) med jod!</p>
 
-            <p>Klik på din piercing, for at få den præcise vejledning til din piercing.</p>
+            <p><b>Klik på din piercing, for at få den præcise vejledning til din piercing:</b></p>
             <div id="knapper">
                 <a href="hudpiercing.html">
                     <div class="piercingknap">
@@ -92,7 +93,6 @@
             <p>Her er en række hyperlinks, til forskellige steder, der har noget at sige om piercing.</p>
             <p>De informationer, du finder her, er vi ikke nødvendigvis altid enige i, men vi medner at det er vigtigt, at DU har mulighed for at søge information. Det er så op til dig at sortere informationerne.</p>
             <p>Nogle af stederne vil nok forekomme de fleste temmelig 'tørre', fx. de steder, der handler om Lov-stof og EU-direktiver; men vi mener at der er omhuen værd, hvis du står lige foran at skulle have din første piercing!</p>
-            <p>(TIP: Når du kommer ind på en hjemmeside med meget tekst, kan du bruge [Ctrl] + [B] til at åbne et 'søge-vindue'. Her skriver du så fx. [piercing] -og så får du vist det første sted i teksten, hvor ordet piercing forekommer. Jeg ved at det virker i MS Internet Explorer, i andre browsere må du selv forsøge dig frem).</p>
 
             <ul>
                 <li> <a href="http://www.safepiercing.dk/">OAPP</a> Organisationen af professionelle Piercere i Danmark.</li>
@@ -115,7 +115,7 @@
         <div class="wrap">
             <div class="col">
                 <ul>
-                    <li>Gorlubb Piercing</li>
+                    <li><b>Gorlubb Piercing</b></li>
                     <li>Gasværksvej 15 - 1656 København</li>
                     <li>Tlf. 33 25 29 26</li>
                     <li>Email: gorlubb@piercing.dk</li>
@@ -125,7 +125,7 @@
 
             <div class="col">
                 <ul>
-                    <li>Aldersgrænser:</li>
+                    <li><b>Aldersgrænser:</b></li>
                     <li>Øreflip Piercing - 4 år</li>
                     <li>Næsepiercing samt bruskpiercinger - 10 år</li>
                     <li>Navlepiercinger samt alle andre piercinger, undtagen genitiale og surface piercinger - 15 år</li>
@@ -136,7 +136,7 @@
 
             <div class="col">
                 <ul>
-                    <li>Åbningstider:</li>
+                    <li><b>Åbningstider:</b></li>
                     <li>Mandag - Torsdag: kl. 11:00 - 18:00</li>
                     <li>Fredag: kl. 11:00 - 20:00</li>
                     <li>Lørdag: kl. 11:00 - 16:00</li>
