--- a/praktiskinfo.html
+++ b/praktiskinfo.html
@@ -24,6 +24,10 @@
         </nav>
     </header>
 
+    <div class="logo">
+
+    </div>
+
     <div class="praktiskinfo">Praktisk info</div>
 
     <section id="praktiskinfo">
