--- a/kontaktbooking.html
+++ b/kontaktbooking.html
@@ -29,6 +29,10 @@
 
     </header>
 
+    <div class="logo">
+
+    </div>
+
     <div class="kontaktbooking"> Kontakt/Booking</div>
 
 
@@ -50,37 +54,37 @@
                 <h2>Navn:</h2>
             </div>
             <div id="navn">
-                <input type="text" placeholder="NAVN">
+                <input type="text">
             </div>
             <div class="txt">
                 <h2>Adresse:</h2>
             </div>
             <div id="adresse">
-                <input type="text" placeholder="ADRESSE">
+                <input type="text">
             </div>
             <div class="txt">
                 <h2>Postnr. og by:</h2>
             </div>
             <div id="by">
-                <input type="text" placeholder="POSTNR. OG BY">
+                <input type="text">
             </div>
             <div class="txt">
                 <h2>Telefonnummer:</h2>
             </div>
             <div id="tlf">
-                <input type="text" placeholder="TELEFONNUMMER">
+                <input type="text">
             </div>
             <div class="txt">
                 <h2>Emailadresse:</h2>
             </div>
             <div id="email">
-                <input type="text" placeholder="EMAILADRESSE">
+                <input type="text">
             </div>
             <div class="txt">
                 <h2>Besked:</h2>
             </div>
             <div id="besked">
-                <input type="text" placeholder="BESKED">
+                <input type="text">
             </div>
         </div>
 
@@ -97,7 +101,7 @@
         <div class="wrap">
             <div class="col">
                 <ul>
-                    <li>Gorlubb Piercing</li>
+                    <li><b>Gorlubb Piercing</b></li>
                     <li>Gasværksvej 15 - 1656 København</li>
                     <li>Tlf. 33 25 29 26</li>
                     <li>Email: gorlubb@piercing.dk</li>
@@ -107,7 +111,7 @@
 
             <div class="col">
                 <ul>
-                    <li>Aldersgrænser:</li>
+                    <li><b>Aldersgrænser:</b></li>
                     <li>Øreflip Piercing - 4 år</li>
                     <li>Næsepiercing samt bruskpiercinger - 10 år</li>
                     <li>Navlepiercinger samt alle andre piercinger, undtagen genitiale og surface piercinger - 15 år</li>
@@ -118,7 +122,7 @@
 
             <div class="col">
                 <ul>
-                    <li>Åbningstider:</li>
+                    <li><b>Åbningstider:</b></li>
                     <li>Mandag - Torsdag: kl. 11:00 - 18:00</li>
                     <li>Fredag: kl. 11:00 - 20:00</li>
                     <li>Lørdag: kl. 11:00 - 16:00</li>
