--- a/piercinger.html
+++ b/piercinger.html
@@ -478,7 +478,7 @@
         <div class="wrap">
             <div class="col">
                 <ul>
-                    <li>Gorlubb Piercing</li>
+                    <li><b>Gorlubb Piercing</b></li>
                     <li>Gasværksvej 15 - 1656 København</li>
                     <li>Tlf. 33 25 29 26</li>
                     <li>Email: gorlubb@piercing.dk</li>
@@ -488,7 +488,7 @@
 
             <div class="col">
                 <ul>
-                    <li>Aldersgrænser:</li>
+                    <li><b>Aldersgrænser:</b></li>
                     <li>Øreflip Piercing - 4 år</li>
                     <li>Næsepiercing samt bruskpiercinger - 10 år</li>
                     <li>Navlepiercinger samt alle andre piercinger, undtagen genitiale og surface piercinger - 15 år</li>
@@ -499,7 +499,7 @@
 
             <div class="col">
                 <ul>
-                    <li>Åbningstider:</li>
+                    <li><b>Åbningstider:</b></li>
                     <li>Mandag - Torsdag: kl. 11:00 - 18:00</li>
                     <li>Fredag: kl. 11:00 - 20:00</li>
                     <li>Lørdag: kl. 11:00 - 16:00</li>
@@ -515,4 +515,6 @@
 
 
     <script src="script.js"></script>
-</body></html>
+</body>
+
+</html>
