--- a/piercinger.html
+++ b/piercinger.html
@@ -9,6 +9,16 @@
     <meta name="robots" content="noindex">
     <link href="https://fonts.googleapis.com/css?family=PT+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.typekit.net/uro8jek.css">
+
+    <link rel="apple-touch-icon" sizes="180x180" href="ikon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="ikon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="ikon/favicon-16x16.png">
+    <link rel="manifest" href="ikon/site.webmanifest">
+    <link rel="mask-icon" href="ikon/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="shortcut icon" href="ikon/favicon.ico">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="msapplication-config" content="ikon/browserconfig.xml">
+    <meta name="theme-color" content="#ffffff">
 </head>
 
 <body>
