--- a/praktiskinfo.html
+++ b/praktiskinfo.html
@@ -10,6 +10,16 @@
 
     <link href="https://fonts.googleapis.com/css?family=PT+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.typekit.net/uro8jek.css">
+
+    <link rel="apple-touch-icon" sizes="180x180" href="ikon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="ikon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="ikon/favicon-16x16.png">
+    <link rel="manifest" href="ikon/site.webmanifest">
+    <link rel="mask-icon" href="ikon/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="shortcut icon" href="ikon/favicon.ico">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="msapplication-config" content="ikon/browserconfig.xml">
+    <meta name="theme-color" content="#ffffff">
 </head>
 
 <body>
@@ -31,10 +41,6 @@
     <div class="praktiskinfo">Praktisk info</div>
 
     <section id="praktiskinfo">
-        <div id="soeg">
-            <input type="text" placeholder="Søg">
-            skal måske slettes?
-        </div>
         <h1>Praktisk Info</h1>
         <div class="txt">
             <h2>Materialer</h2>
