splash slideshow startet og kontaktformular rettet

--- a/index.html
+++ b/index.html
@@ -39,6 +39,21 @@
 
     </div>
 
+    <section id="slideshow">
+        <div class="splashbilleder">
+            <img src="billeder/splash1.jpg" alt="splash">
+        </div>
+        <div class="splashbilleder">
+            <img src="billeder/splash2.jpg" alt="splash">
+        </div>
+        <div class="splashbilleder">
+            <img src="billeder/splash3.jpg" alt="splash">
+        </div>
+        <div class="splashbilleder">
+            <img src="billeder/splash4.jpg" alt="splash">
+        </div>
+    </section>
+
 
     <footer>
 
