--- a/piercinger.html
+++ b/piercinger.html
@@ -53,7 +53,7 @@
         <div class="wrap">
             <h1>Piercinger - husk at rette margin om txt-boksene til efter de rigtige billeder er sat ind!</h1>
             <video controls>
-                <source src="videoer/testvideo.MOV" type="video/mp4">
+                <source src="videoer/" type="video/mp4">
             </video>
         </div>
 
