video tilføjet, husk at download videoer selv og læg i videoer mappe

--- a/omos.html
+++ b/omos.html
@@ -51,7 +51,7 @@
         <div class="wrap">
             <h1>Om os - husk at rette margin om txt-boksene til efter de rigtige billeder er sat ind!</h1>
             <video controls>
-                <source src="videoer/" type="video/mp4">
+                <source src="videoer/gorlubb_piercinger_om_os_720p.mp4" type="video/mp4">
             </video>
             <figcaption><a href="https://audionautix.com/">Music by Audionautix.com</a></figcaption>
         </div>
