--- a/index.html
+++ b/index.html
@@ -18,12 +18,14 @@
 
         <nav>
 
-            <a href="index.html">Forside</a>
-            <a href="piercinger.html">Piercinger</a>
-            <a href="praktiskinfo.html" id="menupraktiskinfo">Praktisk info</a>
-            <a href="omos.html">Om os</a>
-            <a href="priser.html">Priser</a>
-            <a href="kontaktbooking.html" id="menukontaktbooking">Kontakt/booking</a>
+            <div id="">
+                <a href="index.html">Forside</a>
+                <a href="piercinger.html">Piercinger</a>
+                <a href="praktiskinfo.html" id="menupraktiskinfo">Praktisk info</a>
+                <a href="omos.html">Om os</a>
+                <a href="priser.html">Priser</a>
+                <a href="kontaktbooking.html" id="menukontaktbooking">Kontakt/booking</a>
+            </div>
 
         </nav>
 
@@ -40,16 +42,16 @@
     </div>
 
     <section id="slideshow">
-        <div class="splashbilleder">
+        <div class="splashbilleder fade">
             <img src="billeder/splash1.jpg" alt="splash">
         </div>
-        <div class="splashbilleder">
+        <div class="splashbilleder fade">
             <img src="billeder/splash2.jpg" alt="splash">
         </div>
-        <div class="splashbilleder">
+        <div class="splashbilleder fade">
             <img src="billeder/splash3.jpg" alt="splash">
         </div>
-        <div class="splashbilleder">
+        <div class="splashbilleder fade">
             <img src="billeder/splash4.jpg" alt="splash">
         </div>
     </section>
