logo er klikbar

--- a/hudpiercing.html
+++ b/hudpiercing.html
@@ -34,6 +34,13 @@
         </nav>
     </header>
 
+    <a href="index.html">
+        <div class="logo">
+
+        </div>
+    </a>
+
+
     <div class="hudpiercing">Hudpiercing</div>
     <section id="hudpiercing">
         <h1>Hudpiercing</h1>
