--- a/kontaktbooking.html
+++ b/kontaktbooking.html
@@ -39,9 +39,11 @@
 
     </header>
 
-    <div class="logo">
+    <a href="index.html">
+        <div class="logo">
 
-    </div>
+        </div>
+    </a>
 
     <div class="kontaktbooking"> Kontakt/Booking</div>
 
