--- a/praktiskinfo.html
+++ b/praktiskinfo.html
@@ -34,9 +34,11 @@
         </nav>
     </header>
 
-    <div class="logo">
+    <a href="index.html">
+        <div class="logo">
 
-    </div>
+        </div>
+    </a>
 
     <div class="praktiskinfo">Praktisk info</div>
 
