--- a/piercinger.html
+++ b/piercinger.html
@@ -36,9 +36,12 @@
 
     </header>
 
-    <div class="logo">
+    <a href="index.html">
+        <div class="logo">
 
-    </div>
+        </div>
+    </a>
+
 
 
 
