--- a/priser.html
+++ b/priser.html
@@ -37,9 +37,12 @@
 
     </header>
 
-    <div class="logo">
+    <a href="index.html">
+        <div class="logo">
 
-    </div>
+        </div>
+    </a>
+
 
     <div class="priser">Priser</div>
     <section id="priser">
