--- a/piercinger.html
+++ b/piercinger.html
@@ -54,7 +54,7 @@
                 </div>
                 <div class="img">
                     <figure>
-                        <img src="piercinger/oerering.png" alt="ørering">
+                        <img src="piercinger/oereflip.png" alt="ørering">
                     </figure>
                 </div>
             </div>
@@ -192,7 +192,7 @@
                 </div>
                 <div class="img">
                     <figure>
-                        <img src="piercinger/earl.png" alt="earl">
+                        <img src="piercinger/naesefloej.png" alt="earl">
                     </figure>
                 </div>
             </div>
@@ -209,7 +209,7 @@
                 </div>
                 <div class="img">
                     <figure>
-                        <img src="piercinger/laebe.png" alt="læbepiercing">
+                        <img src="piercinger/laebe0.png" alt="læbepiercing">
                     </figure>
                 </div>
             </div>
@@ -261,7 +261,7 @@
                 </div>
                 <div class="img">
                     <figure>
-                        <img src="piercinger/laebe.png" alt="">
+                        <img src="piercinger/smiley.png" alt="smiley">
                     </figure>
                 </div>
             </div>
@@ -270,9 +270,9 @@
                 <div class="txt">
                     <h2>Krop</h2>
                 </div>
-                <div class="img_kropspiercinger">
+                <div class="img">
                     <figure>
-                        <img src="piercinger/dermalanchoring_skindivers_surface.png" alt="kropspiercinger">
+                        <img src="piercinger/krop.png" alt="kropspiercinger">
                     </figure>
                 </div>
                 <div class="txt">
@@ -305,7 +305,7 @@
                 </div>
                 <div class="img">
                     <figure>
-                        <img src="piercinger/innerhelix.png" alt="innerhelix">
+                        <img src="piercinger/navle.png" alt="navle">
                     </figure>
                 </div>
             </div>
@@ -333,7 +333,7 @@
                 </div>
                 <div class="img">
                     <figure>
-                        <img src="piercinger/klitorisforhudlodret.png" alt="klitorisforhud lodret">
+                        <img src="piercinger/klitlodret.png" alt="klitorisforhud lodret">
                     </figure>
                 </div>
                 <div class="txt">
@@ -347,7 +347,7 @@
                 </div>
                 <div class="img">
                     <figure>
-                        <img src="piercinger/klitorisforhud.png" alt="klitoris forhud vandret">
+                        <img src="piercinger/klivandret.png" alt="klitoris forhud vandret">
                     </figure>
                 </div>
                 <div class="txt">
@@ -361,7 +361,7 @@
                 </div>
                 <div class="img">
                     <figure>
-                        <img src="piercinger/indrekoenslaebe.png">
+                        <img src="piercinger/innerlaebe.png">
                     </figure>
                 </div>
                 <div class="txt">
@@ -381,7 +381,7 @@
                 </div>
                 <div class="img">
                     <figure>
-                        <img src="piercinger/ydrekoenslaebe.png" alt="ydre kønslæbe">
+                        <img src="piercinger/ydrelaebe.png" alt="ydre kønslæbe">
                     </figure>
                 </div>
                 <div class="txt">
@@ -423,7 +423,7 @@
                 </div>
                 <div class="img">
                     <figure>
-                        <img src="piercinger/queenvictoria.png" alt="queen vinctoria">
+                        <img src="piercinger/qv.png" alt="queen vinctoria">
                     </figure>
                 </div>
                 <div class="txt">
@@ -448,7 +448,7 @@
                 </div>
                 <div class="img">
                     <figure>
-                        <img src="piercinger/pung.png" alt="hafada">
+                        <img src="piercinger/hafada.png" alt="hafada">
                     </figure>
                 </div>
             </div>
