--- a/index.html
+++ b/index.html
@@ -14,35 +14,56 @@
 
 <body>
 
-
-
     <header>
 
         <nav>
 
-            <a href="index.html" id="menuforside">Forside</a>
-            <a href="piercinger.html">Piercinger</a>
-            <a href="praktiskinfo.html" id="menupraktiskinfo">Praktisk info</a>
-            <a href="omos.html">Om os</a>
-            <a href="priser.html">Priser</a>
-            <a href="kontaktbooking.html">Kontakt/booking</a>
-
+            <div id="">
+                <a href="index.html">Forside</a>
+                <a href="piercinger.html">Piercinger</a>
+                <a href="praktiskinfo.html" id="menupraktiskinfo">Praktisk info</a>
+                <a href="omos.html">Om os</a>
+                <a href="priser.html">Priser</a>
+                <a href="kontaktbooking.html" id="menukontaktbooking">Kontakt/booking</a>
+            </div>
 
         </nav>
 
     </header>
 
 
-    <section id="splash">
+    <div class="logo">
 
+    </div>
+
+
+    <div id="splash">
+
+    </div>
+
+    <section id="slideshow">
+        <div class="splashbilleder fade">
+            <img src="billeder/splash1.jpg" alt="splash">
+        </div>
+        <div class="splashbilleder fade">
+            <img src="billeder/splash2.jpg" alt="splash">
+        </div>
+        <div class="splashbilleder fade">
+            <img src="billeder/splash3.jpg" alt="splash">
+        </div>
+        <div class="splashbilleder fade">
+            <img src="billeder/splash4.jpg" alt="splash">
+        </div>
     </section>
+
 
     <footer>
 
         <div class="wrap">
             <div class="col">
+
                 <ul>
-                    <li>Gorlubb Piercing</li>
+                    <li><b>Gorlubb Piercing</b></li>
                     <li>Gasværksvej 15 - 1656 København</li>
                     <li>Tlf. 33 25 29 26</li>
                     <li>Email: gorlubb@piercing.dk</li>
@@ -52,7 +73,7 @@
 
             <div class="col">
                 <ul>
-                    <li>Aldersgrænser:</li>
+                    <li><b>Aldersgrænser:</b></li>
                     <li>Øreflip Piercing - 4 år</li>
                     <li>Næsepiercing samt bruskpiercinger - 10 år</li>
                     <li>Navlepiercinger samt alle andre piercinger, undtagen genitiale og surface piercinger - 15 år</li>
@@ -63,7 +84,7 @@
 
             <div class="col">
                 <ul>
-                    <li>Åbningstider:</li>
+                    <li><b>Åbningstider:</b></li>
                     <li>Mandag - Torsdag: kl. 11:00 - 18:00</li>
                     <li>Fredag: kl. 11:00 - 20:00</li>
                     <li>Lørdag: kl. 11:00 - 16:00</li>
