--- a/kontaktbooking.html
+++ b/kontaktbooking.html
@@ -10,6 +10,16 @@
 
     <link href="https://fonts.googleapis.com/css?family=PT+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.typekit.net/uro8jek.css">
+
+    <link rel="apple-touch-icon" sizes="180x180" href="ikon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="ikon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="ikon/favicon-16x16.png">
+    <link rel="manifest" href="ikon/site.webmanifest">
+    <link rel="mask-icon" href="ikon/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="shortcut icon" href="ikon/favicon.ico">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="msapplication-config" content="ikon/browserconfig.xml">
+    <meta name="theme-color" content="#ffffff">
 </head>
 
 <body>
@@ -21,13 +31,19 @@
         <nav>
             <a href="index.html">Forside</a>
             <a href="piercinger.html">Piercinger</a>
-            <a href="praktiskinfo.html">Praktisk info</a>
+            <a href="praktiskinfo.html" id="menupraktiskinfo">Praktisk info</a>
             <a href="omos.html">Om os</a>
             <a href="priser.html">Priser</a>
-            <a href="kontaktbooking.html">Kontakt/booking</a>
+            <a href="kontaktbooking.html" id="menukontaktbooking">Kontakt/booking</a>
         </nav>
 
     </header>
+
+    <a href="index.html">
+        <div class="logo">
+
+        </div>
+    </a>
 
     <div class="kontaktbooking"> Kontakt/Booking</div>
 
@@ -47,40 +63,40 @@
                 <h1>Kontakt os direkte</h1>
             </div>
             <div class="txt">
-                <h2>Navn:</h2>
+                <h3>Navn:</h3>
             </div>
             <div id="navn">
-                <input type="text" placeholder="NAVN">
+                <input type="text">
             </div>
             <div class="txt">
-                <h2>Adresse:</h2>
+                <h3>Adresse:</h3>
             </div>
             <div id="adresse">
-                <input type="text" placeholder="ADRESSE">
+                <input type="text">
             </div>
             <div class="txt">
-                <h2>Postnr. og by:</h2>
+                <h3>Postnr. og by:</h3>
             </div>
             <div id="by">
-                <input type="text" placeholder="POSTNR. OG BY">
+                <input type="text">
             </div>
             <div class="txt">
-                <h2>Telefonnummer:</h2>
+                <h3>Telefonnummer:</h3>
             </div>
             <div id="tlf">
-                <input type="text" placeholder="TELEFONNUMMER">
+                <input type="text">
             </div>
             <div class="txt">
-                <h2>Emailadresse:</h2>
+                <h3>Emailadresse:</h3>
             </div>
             <div id="email">
-                <input type="text" placeholder="EMAILADRESSE">
+                <input type="text">
             </div>
             <div class="txt">
-                <h2>Besked:</h2>
+                <h3>Besked:</h3>
             </div>
             <div id="besked">
-                <input type="text" placeholder="BESKED">
+                <input type="text">
             </div>
         </div>
 
@@ -97,7 +113,7 @@
         <div class="wrap">
             <div class="col">
                 <ul>
-                    <li>Gorlubb Piercing</li>
+                    <li><b>Gorlubb Piercing</b></li>
                     <li>Gasværksvej 15 - 1656 København</li>
                     <li>Tlf. 33 25 29 26</li>
                     <li>Email: gorlubb@piercing.dk</li>
@@ -107,7 +123,7 @@
 
             <div class="col">
                 <ul>
-                    <li>Aldersgrænser:</li>
+                    <li><b>Aldersgrænser:</b></li>
                     <li>Øreflip Piercing - 4 år</li>
                     <li>Næsepiercing samt bruskpiercinger - 10 år</li>
                     <li>Navlepiercinger samt alle andre piercinger, undtagen genitiale og surface piercinger - 15 år</li>
@@ -118,7 +134,7 @@
 
             <div class="col">
                 <ul>
-                    <li>Åbningstider:</li>
+                    <li><b>Åbningstider:</b></li>
                     <li>Mandag - Torsdag: kl. 11:00 - 18:00</li>
                     <li>Fredag: kl. 11:00 - 20:00</li>
                     <li>Lørdag: kl. 11:00 - 16:00</li>
