--- a/omos.html
+++ b/omos.html
@@ -10,6 +10,16 @@
 
     <link href="https://fonts.googleapis.com/css?family=PT+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.typekit.net/uro8jek.css">
+
+    <link rel="apple-touch-icon" sizes="180x180" href="ikon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="ikon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="ikon/favicon-16x16.png">
+    <link rel="manifest" href="ikon/site.webmanifest">
+    <link rel="mask-icon" href="ikon/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="shortcut icon" href="ikon/favicon.ico">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="msapplication-config" content="ikon/browserconfig.xml">
+    <meta name="theme-color" content="#ffffff">
 </head>
 
 <body>
@@ -19,13 +29,20 @@
         <nav>
             <a href="index.html">Forside</a>
             <a href="piercinger.html">Piercinger</a>
-            <a href="praktiskinfo.html">Praktisk info</a>
+            <a href="praktiskinfo.html" id="menupraktiskinfo">Praktisk info</a>
             <a href="omos.html">Om os</a>
             <a href="priser.html">Priser</a>
-            <a href="kontaktbooking.html">Kontakt/booking</a>
+            <a href="kontaktbooking.html" id="menukontaktbooking">Kontakt/booking</a>
         </nav>
 
     </header>
+
+    <a href="index.html">
+        <div class="logo">
+
+        </div>
+    </a>
+
 
     <div class="omos"> Om os</div>
 
@@ -37,8 +54,9 @@
         <div class="wrap">
             <h1>Om os - husk at rette margin om txt-boksene til efter de rigtige billeder er sat ind!</h1>
             <video controls>
-                <source src="videoer/testvideo.MOV" type="video/mp4">
+                <source src="videoer/gorlubb_piercinger_om_os_720p.mp4" type="video/mp4">
             </video>
+            <figcaption><a href="https://audionautix.com/">Music by Audionautix.com</a></figcaption>
         </div>
 
         <!--        *******Video slut*******-->
@@ -48,66 +66,105 @@
         <div class="wrap">
 
             <div class="col">
-                <div class="txt">
-                    <h2>Person 1</h2>
+                <div class="top">
+                    <div class="txt">
+                        <h2>Jack Rubini</h2>
+                    </div>
+                    <div class="img">
+                        <figure>
+                            <img src="billeder/jack.jpg" alt="Jack">
+                        </figure>
+                    </div>
+                    <div class="txt">
+                        <p>Jack Rubini er Indehaver & Master-piercer - han har piercet i 22 år og været i forgrunden af den danske piercingscene, siden det kom til landet.<br>
+                            Jack startede sin karriere da han åbnede Gorlubb Piercing tilbage i August 1995.
+                            Inden da havde han tilegnet sig viden gennem international IMAX, som bragte piercere fra verdens første piercing butikker,
+                            GAUNTLET, til Italien, for at udføre basis Piercing Seminars.<br>
+                            Her mødte han Grant Dempsey Cold Steel, London, Paul King, Gauntlet USA og Laureen Pine, Gauntlet USA - dette var i marts 1995. I April, 1997 afholdt Gaunlet Verdens første ADVANCED Piercing Seminar, styret af Michaela Grey.
+                            Her var alle piercingpionererne tilstede, og der blev knyttet mange bånd, og viden delt.</p>
+                    </div>
                 </div>
-                <div class="img">
-                    <figure>
-                        <img src="billeder/jack.jpg" alt="Jack">
-                    </figure>
-                </div>
-                <div class="txt">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit vel harum debitis est ullam sint voluptatem deserunt expedita asperiores amet optio necessitatibus iure omnis numquam, eos consectetur, accusantium eveniet esse.</p>
-                </div>
-                <div class="img">
-                    <figure>
-                        <img src="arbejdsbilleder/jackarbejde.jpg" alt="Jack arbejder">
-                    </figure>
-                </div>
-                <div class="txt">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit vel harum debitis est ullam sint voluptatem deserunt expedita asperiores amet optio necessitatibus iure omnis numquam, eos consectetur, accusantium eveniet esse.</p>
+                <div class="bottom">
+                    <div class="img">
+                        <figure>
+                            <img src="arbejdsbilleder/jackarbejde.jpg" alt="Jack arbejder">
+                        </figure>
+                    </div>
+                    <div class="txt">
+                        <p>Jack har efterfølgende taget mange seminarer, samt afholdt endnu flere, i forbindelse med sit arbejde som Formand for European Assosiation of Professional Piercers. <br>
+                            Anatomi og Fysiologi<br>
+                            Blood Borne Pathrogens<br>
+                            First Aid, English.<br>
+                            Første Hjælp, Dansk<br><br>
+                            Diverse Kurser i piercingens kunst:<br>
+                            Kvindelige genitiale piercinger.<br>
+                            Mandelige genitiale piercinger.<br>
+                            Sårheling og problematikker.<br>
+                            Advancede Piercing technics.<br>
+                            Og mange flere.<br>
+                            <br>En sjov og lille, men alligevel vigtig, anekdote: Jack var manden der navngav 'Madonna' Piercingen.</p>
+                    </div>
                 </div>
             </div>
+
             <div class="col">
-                <div class="txt">
-                    <h2>Person 2</h2>
+                <div class="top">
+                    <div class="txt">
+                        <h2>Kira Kinch</h2>
+                    </div>
+                    <div class="img">
+                        <figure>
+                            <img src="billeder/kira.jpg" alt="Kira">
+                        </figure>
+                    </div>
+                    <div class="txt">
+                        <p>Kira Kinch er piercer.<br>Hun er udlært hos Gorlubb piercing af Jack Rubini, og hun færdiggjorde sin oplæring i december 2017.<br>
+                            Kiras interesse for piercing startede i teenage-årene, med en fascination af Punkkulturen.<br>
+                            Som piercer lægger hun stor vægt på, at skabe rolige og trygge omgivelser for sine kunder, samt at udføre
+                            sit arbejde med de bedste teknikker - derfor bestræber hun sig også på at lære mere, og forbedre sit fag.</p><br><br><br><br><br><br><br>
+                    </div>
                 </div>
-                <div class="img">
-                    <figure>
-                        <img src="billeder/kira.jpg" alt="Kira">
-                    </figure>
-                </div>
-                <div class="txt">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit vel harum debitis est ullam sint voluptatem deserunt expedita asperiores amet optio necessitatibus iure omnis numquam, eos consectetur, accusantium eveniet esse.</p>
-                </div>
-                <div class="img">
-                    <figure>
-                        <img src="arbejdsbilleder/kiraarbejde.jpg" alt="Kira arbejder">
-                    </figure>
-                </div>
-                <div class="txt">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit vel harum debitis est ullam sint voluptatem deserunt expedita asperiores amet optio necessitatibus iure omnis numquam, eos consectetur, accusantium eveniet esse.</p>
+                <div class="bottom">
+                    <div class="img">
+                        <figure>
+                            <img src="arbejdsbilleder/kiraarbejde.jpg" alt="Kira arbejder">
+                        </figure>
+                    </div>
+                    <div class="txt">
+                        <p>Kira har efterfølgende taget nedenstående seminarer:<br>
+
+                            Blood Borne Pathogens<br>
+                            Første Hjælp, Dansk<br>
+
+                            Med planer om at deltage i mange flere.</p>
+                    </div>
                 </div>
             </div>
+
             <div class="col">
-                <div class="txt">
-                    <h2>Person 3</h2>
+                <div class="top">
+                    <div class="txt">
+                        <h2>Mira Rubini</h2>
+                    </div>
+                    <div class="img">
+                        <figure>
+                            <img src="billeder/mira.jpg" alt="Mira">
+                        </figure>
+                    </div>
+                    <div class="txt">
+                        <p>Mira Rubini har arbejdet hos Gorlubb Piercing i 10 år.
+                            Hun er datter af Jack og har derfor været med siden begyndelsen, først på sidelinjen - og er siden blevet lært op i piercingens kunst.</p><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+                    </div>
                 </div>
-                <div class="img">
-                    <figure>
-                        <img src="billeder/mira.jpg" alt="Mira">
-                    </figure>
-                </div>
-                <div class="txt">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit vel harum debitis est ullam sint voluptatem deserunt expedita asperiores amet optio necessitatibus iure omnis numquam, eos consectetur, accusantium eveniet esse.</p>
-                </div>
-                <div class="img">
-                    <figure>
-                        <img src="arbejdsbilleder/miraarbejde2.jpg" alt="Mira arbejder">
-                    </figure>
-                </div>
-                <div class="txt">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit vel harum debitis est ullam sint voluptatem deserunt expedita asperiores amet optio necessitatibus iure omnis numquam, eos consectetur, accusantium eveniet esse.</p>
+                <div class="bottom">
+                    <div class="img">
+                        <figure>
+                            <img src="arbejdsbilleder/miraarbejde2.jpg" alt="Mira arbejder">
+                        </figure>
+                    </div>
+                    <div class="txt">
+                        <p>Mira går op i at kunderne føler sig trygge i hendes selskab, samt altid at give en god oplevelse med et flot resultat.</p>
+                    </div>
                 </div>
             </div>
         </div>
@@ -120,7 +177,7 @@
         <div class="wrap">
             <div class="col">
                 <ul>
-                    <li>Gorlubb Piercing</li>
+                    <li><b>Gorlubb Piercing</b></li>
                     <li>Gasværksvej 15 - 1656 København</li>
                     <li>Tlf. 33 25 29 26</li>
                     <li>Email: gorlubb@piercing.dk</li>
@@ -130,7 +187,7 @@
 
             <div class="col">
                 <ul>
-                    <li>Aldersgrænser:</li>
+                    <li><b>Aldersgrænser:</b></li>
                     <li>Øreflip Piercing - 4 år</li>
                     <li>Næsepiercing samt bruskpiercinger - 10 år</li>
                     <li>Navlepiercinger samt alle andre piercinger, undtagen genitiale og surface piercinger - 15 år</li>
@@ -141,7 +198,7 @@
 
             <div class="col">
                 <ul>
-                    <li>Åbningstider:</li>
+                    <li><b>Åbningstider:</b></li>
                     <li>Mandag - Torsdag: kl. 11:00 - 18:00</li>
                     <li>Fredag: kl. 11:00 - 20:00</li>
                     <li>Lørdag: kl. 11:00 - 16:00</li>
@@ -153,4 +210,6 @@
     </footer>
 
     <script src="script.js"></script>
-</body></html>
+</body>
+
+</html>
