--- a/piercinger.html
+++ b/piercinger.html
@@ -9,6 +9,16 @@
     <meta name="robots" content="noindex">
     <link href="https://fonts.googleapis.com/css?family=PT+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.typekit.net/uro8jek.css">
+
+    <link rel="apple-touch-icon" sizes="180x180" href="ikon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="ikon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="ikon/favicon-16x16.png">
+    <link rel="manifest" href="ikon/site.webmanifest">
+    <link rel="mask-icon" href="ikon/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="shortcut icon" href="ikon/favicon.ico">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="msapplication-config" content="ikon/browserconfig.xml">
+    <meta name="theme-color" content="#ffffff">
 </head>
 
 <body>
@@ -18,25 +28,35 @@
         <nav>
             <a href="index.html">Forside</a>
             <a href="piercinger.html">Piercinger</a>
-            <a href="praktiskinfo.html">Praktisk info</a>
+            <a href="praktiskinfo.html" id="menupraktiskinfo">Praktisk info</a>
             <a href="omos.html">Om os</a>
             <a href="priser.html">Priser</a>
-            <a href="kontaktbooking.html">Kontakt/booking</a>
+            <a href="kontaktbooking.html" id="menukontaktbooking">Kontakt/booking</a>
         </nav>
 
     </header>
+
+    <a href="index.html">
+        <div class="logo">
+
+        </div>
+    </a>
+
+
+
 
     <div class="piercinger"> Piercinger</div>
 
 
     <section id="piercinger">
 
+
         <!--        *******Video start*******-->
 
         <div class="wrap">
             <h1>Piercinger - husk at rette margin om txt-boksene til efter de rigtige billeder er sat ind!</h1>
             <video controls>
-                <source src="videoer/testvideo.MOV" type="video/mp4">
+                <source src="videoer/piercingproces.mp4" type="video/mp4">
             </video>
         </div>
 
@@ -80,6 +100,7 @@
                     </figure>
                 </div>
             </div>
+
 
         </div>
 
@@ -471,7 +492,7 @@
         <div class="wrap">
             <div class="col">
                 <ul>
-                    <li>Gorlubb Piercing</li>
+                    <li><b>Gorlubb Piercing</b></li>
                     <li>Gasværksvej 15 - 1656 København</li>
                     <li>Tlf. 33 25 29 26</li>
                     <li>Email: gorlubb@piercing.dk</li>
@@ -481,7 +502,7 @@
 
             <div class="col">
                 <ul>
-                    <li>Aldersgrænser:</li>
+                    <li><b>Aldersgrænser:</b></li>
                     <li>Øreflip Piercing - 4 år</li>
                     <li>Næsepiercing samt bruskpiercinger - 10 år</li>
                     <li>Navlepiercinger samt alle andre piercinger, undtagen genitiale og surface piercinger - 15 år</li>
@@ -492,7 +513,7 @@
 
             <div class="col">
                 <ul>
-                    <li>Åbningstider:</li>
+                    <li><b>Åbningstider:</b></li>
                     <li>Mandag - Torsdag: kl. 11:00 - 18:00</li>
                     <li>Fredag: kl. 11:00 - 20:00</li>
                     <li>Lørdag: kl. 11:00 - 16:00</li>
@@ -508,4 +529,6 @@
 
 
     <script src="script.js"></script>
-</body></html>
+</body>
+
+</html>
