--- a/index.html
+++ b/index.html
@@ -41,25 +41,43 @@
 
     </div>
 
-    <section id="slideshow">
-        <div class="splashbilleder fade">
-            <img src="billeder/splash1.jpg" alt="splash">
+    <section id="forside">
+        <div class="wrap sort">
+            <div class="splashbilleder fade">
+                <img src="billeder/splash1.jpg" alt="splash">
+            </div>
+            <div class="splashbilleder fade">
+                <img src="billeder/splash2.jpg" alt="splash">
+            </div>
+            <div class="splashbilleder fade">
+                <img src="billeder/splash3.jpg" alt="splash">
+            </div>
+            <div class="splashbilleder fade">
+                <img src="billeder/splash4.jpg" alt="splash">
+            </div>
         </div>
-        <div class="splashbilleder fade">
-            <img src="billeder/splash2.jpg" alt="splash">
+
+
+        <div class="wrap txt">
+            <h1>Følg med i vores arbejde:</h1>
         </div>
-        <div class="splashbilleder fade">
-            <img src="billeder/splash3.jpg" alt="splash">
+        <div class="wrap">
+            <div class="col">
+                <img src="billeder/facebook.png" alt="facebook">
+            </div>
+            <div class="col">
+                <img src="billeder/instagram.png" alt="instagram">
+            </div>
         </div>
-        <div class="splashbilleder fade">
-            <img src="billeder/splash4.jpg" alt="splash">
-        </div>
+
+
+
     </section>
 
 
     <footer>
 
-        <div class="wrap">
+        <div class=" wrap">
             <div class="col">
 
                 <ul>
