--- a/piercinger.html
+++ b/piercinger.html
@@ -100,11 +100,6 @@
                 </div>
             </div>
 
-
-        </div>
-
-        <div class="wrap">
-
             <div class="col">
                 <div class="txt">
                     <h2>Daith</h2>
@@ -115,6 +110,12 @@
                     </figure>
                 </div>
             </div>
+
+
+        </div>
+
+        <div class="wrap">
+
 
             <div class="col">
                 <div class="txt">
@@ -137,11 +138,6 @@
                     </figure>
                 </div>
             </div>
-
-        </div>
-
-        <div class="wrap">
-
 
             <div class="col">
                 <div class="txt">
@@ -168,6 +164,13 @@
                 </div>
             </div>
 
+        </div>
+
+
+
+        <div class="wrap">
+
+
             <div class="col">
                 <div class="txt">
                     <h2>Øjenbryn</h2>
@@ -178,11 +181,6 @@
                     </figure>
                 </div>
             </div>
-
-        </div>
-
-        <div class="wrap">
-
 
             <div class="col">
                 <div class="txt">
@@ -256,11 +254,6 @@
                 </div>
             </div>
 
-        </div>
-
-        <div class="wrap">
-
-
             <div class="col">
                 <div class="txt">
                     <h2>Madonna</h2>
@@ -274,6 +267,12 @@
                     <p>Fun fact: Jack Rubini navngav Madonna piercingen. </p>
                 </div>
             </div>
+
+        </div>
+
+        <div class="wrap">
+
+
 
             <div class="col">
                 <div class="txt">
@@ -300,11 +299,6 @@
                 </div>
             </div>
 
-        </div>
-
-        <div class="wrap">
-
-
             <div class="col">
                 <div class="txt">
                     <h2>Brystvorte</h2>
@@ -330,6 +324,12 @@
                 </div>
             </div>
 
+        </div>
+
+
+
+        <div class="wrap">
+
             <div class="col">
                 <div class="txt">
                     <h2>Christina</h2>
@@ -340,11 +340,6 @@
                     </figure>
                 </div>
             </div>
-
-        </div>
-
-
-        <div class="wrap">
 
 
             <div class="col">
@@ -431,12 +426,6 @@
                 </div>
             </div>
 
-        </div>
-
-
-        <div class="wrap">
-
-
             <div class="col">
                 <div class="txt">
                     <h2>Q. victoria</h2>
@@ -450,6 +439,13 @@
                     <p>Queen Victoria. </p>
                 </div>
             </div>
+
+
+        </div>
+
+
+        <div class="wrap">
+
 
             <div class="col">
                 <div class="txt">
@@ -472,6 +468,25 @@
                     </figure>
                 </div>
             </div>
+
+            <div class="col">
+                <div class="txt">
+                    <h2></h2>
+                </div>
+                <figure>
+                    <img src="">
+                </figure>
+            </div>
+
+            <div class="col">
+                <div class="txt">
+                    <h2></h2>
+                </div>
+                <figure>
+                    <img src="">
+                </figure>
+            </div>
+
 
         </div>
 
@@ -528,6 +543,4 @@
 
 
     <script src="script.js"></script>
-</body>
-
-</html>
+</body></html>
