--- a/piercinger.html
+++ b/piercinger.html
@@ -188,7 +188,7 @@
                 </div>
                 <div class="img">
                     <figure>
-                        <img src="piercinger/naesefloej.png" alt="næsefløj">
+                        <img src="piercinger/n%C3%A6sefl%C3%B8j.png" alt="næsefløj">
                     </figure>
                 </div>
             </div>
@@ -543,4 +543,6 @@
 
 
     <script src="script.js"></script>
-</body></html>
+</body>
+
+</html>
