--- a/omos.html
+++ b/omos.html
@@ -52,7 +52,6 @@
         <!--        *******Video start*******-->
 
         <div class="wrap">
-            <h1>Om os - husk at rette margin om txt-boksene til efter de rigtige billeder er sat ind!</h1>
             <video controls>
                 <source src="videoer/gorlubb_piercinger_om_os_720p.mp4" type="video/mp4">
             </video>
@@ -210,6 +209,4 @@
     </footer>
 
     <script src="script.js"></script>
-</body>
-
-</html>
+</body></html>
