splashbilleder fylder hele skærmen i tlf version

--- a/index.html
+++ b/index.html
@@ -51,22 +51,25 @@
 
     </div>
 
-    <section id="forside">
+    <section id="splash">
         <div class="wrap sort">
-            <div class="splashbilleder fade">
-                <img src="billeder/splash1.jpg" alt="splash">
+            <div class="splashbilleder splash1 fade">
+
             </div>
-            <div class="splashbilleder fade">
-                <img src="billeder/splash2.jpg" alt="splash">
+            <div class="splashbilleder splash2 fade">
+
             </div>
-            <div class="splashbilleder fade">
-                <img src="billeder/splash3.jpg" alt="splash">
+            <div class="splashbilleder splash3 fade">
+
             </div>
-            <div class="splashbilleder fade">
-                <img src="billeder/splash4.jpg" alt="splash">
+            <div class="splashbilleder splash4 fade">
+
             </div>
         </div>
+    </section>
 
+
+    <section id="forside">
 
         <div class="wrap txt">
             <h1>Følg med i vores arbejde:</h1>
